add to chap4 section about print_graph, run_testcase

--- a/chap1.tex
+++ b/chap1.tex
@@ -128,6 +128,7 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 \end{enumerate}
 
 \subsection{Тестовые примеры}
+\label{sec:Cppalgo_tests}
 
 1.	graph1.txt
 
@@ -165,7 +166,7 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 \end{figure}
 
 \subsection{Создания программы}
-\label{sec:Desc_wave_find_path}
+\label{sec:Desc_prg}
 
 %%% Local Variables: 
 %%% mode: latex
