--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,8 @@
   columns=fullflexible,
   frame=single,
   escapechar=\%,
-  extendedchars=\false
+  extendedchars=\false,
+  mathescape=\true
 }
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
