add to chap4 section about preparation before building waves list

--- a/chap3.tex
+++ b/chap3.tex
@@ -1,8 +1,10 @@
 
 \chapter{Демонстрация работы программы решения теоретико-графовой
   задачи в семантической памяти}
+\label{cha:AlgoDemo}
 
 \section{Задание}
+\label{sec:AlgoDemo_task}
 
 На этом этапе выполнения расчетной работы вам необходимо будет
 продемонстрировать пошаговое выполнение алгоритма в sc-памяти. Сам
@@ -18,9 +20,10 @@
 
 \section{Волновой алгоритм поиска одного из минимальных путей в
   неориентированном графе}
+\label{sec:AlgoDemo_algo}
 
 \subsection{Описание алгоритма}
-\label{sec:-Algo_desc}
+\label{sec:AlgoDemo_algo_desc}
 
 Алгоритм поиска одного из минимальных путей в неориентированном графе
 является волновым и основан на понятии волны. В рамках этого алгоритма
@@ -53,8 +56,10 @@
 \end{enumerate}
 
 \subsection{Пример выполнения алгоритма в sc-памяти}
+\label{sec:AlgoDemo_example}
 
 \subsubsection{Соглашения по демонстрации}
+\label{sec:AlgoDemo_demo_conv}
 
 Перед демонстрацией выполнения алгоритма в sc-памяти нам необходимо
 установить некоторые соглашения по формирование SCg-рисунков.
@@ -107,27 +112,29 @@ sc-конструкция не является корректной в сема
 Пришло время посмотреть, как же работает наш алгоритм в sc-памяти.
 
 \subsubsection{Демонстрация алгоритма}
+\label{sec:AlgoDemo_demo}
 
 Выполнение алгоритма я продемонстрирую через состояния sc-памяти на
 каждом элементарном этапе решения задачи. Для всех элементарных
 этапов, для которых это возможно, в конце их краткого описания в
 скобках будет указан соответствующий номер шага алгоритма из
-раздела~\ref{sec:-Algo_desc}.
+раздела~\ref{sec:AlgoDemo_algo_desc}.
 
 \newenvironment{algostep}[3]
 {
   \newpage
-  \emph{\textbf{#1}}
-
+  \label{astep:#2}
+  \item \emph{\textbf{#1}}
+  
   \begin{figure}[h!]
     \centering
     \includegraphics[scale=#3]{3/#2}
-    \label{fig:#2}
   \end{figure}
 }
 {
 }
 
+\begin{itemize}
 \begin{algostep}{Задание входного графа, начальной и конечной вершины
     пути для работы алгоритма}{S1_Input_graph}{0.8}
   
@@ -335,7 +342,7 @@ sc-конструкция не является корректной в сема
   значение переменной \vidtf{route} будет возвращено в вызывающий
   контекст.
 \end{algostep}
-
+\end{itemize}
 
 %%% Local Variables: 
 %%% mode: latex
